--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Hello from GitHub Pages!</h1>
   <p>This is your freelance landing page. Customize it as you like.</p>
 <h2>Send me your request</h2>
-<form action="https://bffb-78-84-247-145.ngrok-free.app/webhook/contact" method="POST">
+<form action="https://32ba-78-84-247-145.ngrok-free.app/webhook/contact" method="POST">
   <input type="text" name="name" placeholder="Your name" required /><br />
   <input type="email" name="email" placeholder="Your email" required /><br />
   <textarea name="message" placeholder="What do you need?" required></textarea><br />
